# webql

./: README.md  pyproject.toml
analysis_db/docs/source/: index.rst  modules.rst
analysis_db/vulnerable_examples/: sql_injection.js  test.js  vulnerable_node_script.js  vulnerable_webapp.js
analysis_db/webql/: config.py  exceptions.py
analysis_db/webql/analyzers/: codeql_analyzer.py  javascript_analyzer.py
analysis_db/webql/commands/: __init__.py  parse.py
analysis_db/webql/scripts/: analyze_examples.py  full_analysis.py
analysis_db/webql/tests/: test_vulnerable_examples.py
analysis_db/webql/utils/: __init__.py
docs/: conf.py
docs/docs/source/: conf.py
webql/: .gitignore  __init__.py  cli.py
webql/analyzers/: __init__.py  javascript_analyzer.py  webcrack_analyzer.py
webql/commands/: generate.py  results.py  scan.py
webql/tests/: __init__.py
webql/utils/: js_beautifier.py
