[tool.poetry]
name = "webql"
version = "0.1.0"
description = "A robust, automated JavaScript analysis engine and workflow orchestration framework"
authors = ["queencitycyber"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
rich = "^10.16.2"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
trufflehog = "^2.2.1"
jsbeautifier = "^1.15.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
flake8 = "^3.9.2"
mypy = "^0.910"
pytest = "^6.2.5"
Sphinx = "^4.2.0"

[tool.poetry.scripts]
webql = "webql.cli:cli"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.8"
disallow_untyped_defs = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"